syntax = "proto3";

package fsapi;

option go_package = "github.com/Mexator/Go-vno/pkg/api/fileserver";

service FileServer {
	rpc Read(ReadRequest) returns (ReadResponse) {}
	rpc Write(WriteRequest) returns (WriteResponse) {}

	// Only for name server
	rpc Create(CreateRequest) returns (CreateResponse) {}
	rpc Remove(RemoveRequest) returns (RemoveResponse) {}
}

message ReadRequest {
	string inode = 1;
	uint64 offset = 2;
	uint64 size = 3;
}

message ReadResponse {
	bytes content = 1;
}

message WriteRequest {
	string inode = 1;
	uint64 offset = 2;
	bytes content = 3;
}

message WriteResponse {}

message CreateRequest {
	string inode = 1;
}

message CreateResponse {}

message RemoveRequest {
	string inode = 1;
}

message RemoveResponse {}
