syntax = "proto3";

package nsapi;

service NameServer {
	// TODO
}
